# rust-ethers

./: .env  Cargo.toml  README.md  airdrop
excels/: NFTAirdrop.xlsx
src/: airdrop_dictionary.rs  lib.rs  main.rs  server.rs  signing.rs
src/scripts/: dict.rs
