[package]
name = "ethers-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ethers = { git = "https://github.com/gakonst/ethers-rs" }
calamine = "0.18.0"
bincode = "1.3.3"
serde = {version = "1.0.132", features = ["derive"]}
