[package]
name = "airdrop_cmc"
version = "0.1.0"
edition = "2021"
default-run = "airdrop_cmc"
authors = ["hyouka266@gmail.com"]
rust-version = "1.57"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trasua/rust-ethers"
homepage = "https://github.com/trasua/rust-ethers"
description = "Airdrop NFT server"
documentation = "https://github.com/trasua/rust-ethers"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ethers = { git = "https://github.com/gakonst/ethers-rs" }
ethers = "0.6.2"
calamine = "0.18.0"
bincode = "1.3.3"
serde = {version = "1.0.132", features = ["derive"]}
serde_json = "1.0.68"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.39"
hex = "0.4.3"
bytes = "1.1.0"
rand = "0.8.4"
dotenv = "0.15.0"
axum = "0.4.3"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
lazy_static = "1.4.0"
tower-http = { version="0.1.2", features = ["cors"] }
tower = "0.4.11"
clap = { version = "3.0.5", features = ["derive"] }

[[bin]]
name = "dict"
path = "src/scripts/dict.rs"
